<resources>
    <string name="app_name">ST2 PAI5: Hospital warehouse</string>
    <string name="string_hospital_warehouse_app" />
    <string name="enviar">Enviar</string>
    <string name="beds">Camas</string>
    <string name="tables">Mesas</string>
    <string name="chairs">Sillas</string>
    <string name="armchairs">Sillones</string>
    <string name="clientNumber">Número de cliente</string>
    <string name="pageTitle">Petición de material</string>
</resources>
